# bio_contest_2021

./: .gitignore  LICENSE  README.md
problem_2.2/: README.md
problem_2.2/scripts/: epigenome_problem.py
problem_2.3/: README.md
problem_2.3/scripts/: metabolomics.py
problem_2.4/: README.md
problem_2.4/scripts/: custom_segment_tree.py  hpo_disease.py  sparse_table.py
problem_3.2/: README.md
problem_3.2/scripts/: main.py  main_v2.py
problem_3.3/: README.md
problem_3.3/scripts/: main.py  main_hard.py
problem_3.4/: README.md
problem_3.4/scripts/: main.py
problem_3.5/: README.md
problem_3.5/scripts/: main.py
problem_3.6/: README.md
problem_3.6/scripts/: main.py  main_v2.py  main_v3.py
problem_3.6/scripts/rust_ivtree/: Cargo.toml  README.md
problem_3.6/scripts/rust_ivtree/src/: main.rs
template/scripts/: main.py
